# urr_ros_python

./: LICENSE  README.md
urr_p_01_pub_sub/: CMakeLists.txt  README.md  package.xml
urr_p_01_pub_sub/scripts/: publisher.py  subscriber.py
urr_p_02_custom_msg/: CMakeLists.txt  README.md  package.xml
urr_p_02_custom_msg/scripts/: customPublisher.py  customSubscriber.py
urr_p_03_services/: CMakeLists.txt  README.md  package.xml
urr_p_03_services/scripts/: add_two_ints_client.py  add_two_ints_server.py  client.py  server.py
urr_p_04_custom_srv/: CMakeLists.txt  README.md  package.xml
urr_p_04_custom_srv/scripts/: add_two_ints_client.py  add_two_ints_server.py
urr_p_04_custom_srv/srv/: AddTwoInts.srv
urr_p_05_actions/: CMakeLists.txt  README.md  package.xml
urr_p_05_actions/scripts/: action_client.py  action_client_nowait.py  action_client_preemting.py  action_server.py
urr_p_06_custom_action/: CMakeLists.txt  package.xml
urr_p_06_launchfile_params/: CMakeLists.txt  README.md  package.xml
urr_p_06_launchfile_params/launch/: urr_01_pub.launch  urr_02_servers.launch  urr_03_args_params.launch
urr_p_07_motion/: CMakeLists.txt  package.xml
urr_p_07_motion/scripts/: urr_01_move_robot.py  urr_02_odom_subscriber.py  urr_03_goal_to_goal.py
urr_p_07_motion/srv/: Goal.srv
urr_p_08_perception/: CMakeLists.txt  package.xml
urr_p_08_perception/launch/: urr_01_ninjabot_gazebo.launch  urr_01_ninjabot_gazebo_wall.launch  urr_02_ninjabot_gazebo_ball.launch
urr_p_08_perception/scripts/: urr_01_laser_subscribe.py  urr_02_obstacle_avoidance.py  urr_03_access_camera.py  urr_04_color_filttering.py  urr_05_ball_detection.py  urr_06_ball_tracking.py  urr_07_follow_ball.py
urr_p_08_perception/scripts/helper/: hsv_range_selector.py
urr_p_09_launchfile_params/: package.xml
urr_p_09_perception/: CMakeLists.txt
urr_p_09_urdf/: CMakeLists.txt  package.xml
urr_p_09_urdf/launch/: urr_01_urdf_visualize.launch
urr_p_09_urdf/rviz/: rviz.rviz
urr_p_09_urdf/urdf/: urr_01_mira_simple.urdf  urr_02_mira_simple_color.urdf  urr_o3_mira_rpy.urdf  urr_o4_mira_rpy_meshed.urdf
urr_p_10_tf/: CMakeLists.txt  package.xml
urr_p_10_urdf/: CMakeLists.txt  package.xml
urr_p_11_control/: CMakeLists.txt  package.xml
urr_p_11_tf/: CMakeLists.txt  package.xml
