<?xml version="1.0"?>
<package format="2">
  <name>urr_p_05_actions</name>
  <version>0.0.0</version>
  <description>The urr_p_05_actions package</description>

  <maintainer email="nagachaitanya948@gmail.com">chaitu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
