<?xml version="1.0"?>
<package format="2">
  <name>urr_p_06_launchfile_params</name>
  <version>0.0.0</version>
  <description>The urr_p_06_launchfile_params package</description>
  <maintainer email="nagachaitanya948@gmail.com">chaitu</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
