<?xml version="1.0"?>
<package format="2">
  <name>urr_p_08_perception</name>
  <version>0.0.0</version>
  <description>The urr_p_08_perception package</description>
  <maintainer email="nagachaitanya948@gmail.com">chaitu</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>

  </export>
</package>
